adjust Makefile logic for sub-module use .vs. stand-alone

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,12 @@
-LIB-CIFIB-SUBMODULE=../../../lib/libcifib.a
-LIB=libsmtp.a
+# a conditional check is used below to differentiate beween the two types of invocation:
+# 1 - (default) - this code is compiled as a cifib sub-module and thus no Makefile target is provided
+# 2 - compiled as a stand-alone project (need to run: make compile)
+
+ifeq ($(MAKECMDGOALS),compile)
+  LIB=libsmtp.a
+else  
+  LIB=../../../lib/libcifib.a
+endif
 
 OBJS=attachment.o base64.o credential.o errorresolver.o forcedsecuresmtpclient.o htmlmessage.o \
 	messageaddress.o message.o opportunisticsecuresmtpclient.o plaintextmessage.o securesmtpclientbase.o \
@@ -12,7 +19,7 @@ CXXFLAGS += -I../include -std=c++14
 default: compile-as-cifib-submodule
 
 compile-as-cifib-submodule: $(OBJS)
-	$(AR) -s $(LIB-CIFIB-SUBMODULE)
+	$(AR) -s $(LIB)
 
 compile: $(OBJS)
 	$(AR) -s $(LIB)
